[package]
name = "graph_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
dashmap = "5.0.0"
priority-queue = "1.2.1"
log = "0.4"
futures = "0.3.19"
anyhow = "1.0.53"
async-trait = "0.1.52"

[dev_dependencies]
once_cell = "1.9.0"
tokio = { version = "1.15.0", features = ["full"] }
